Uitwerking van de exercise

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <br>
         <h2>Wat is het grootste meer van Nederland?</h2>
         <input id="Meer" class="Meer" name="Meer" type="text">
+        <h2>Wat is een duits automerk?</h2>
+        <input id="Automerk" class="Automerk" name="Automerk" type="text">
+        <h2>Noem een waddeneiland</h2>
+        <input id="Waddeneiland" class="Waddeneiland" name="Waddeneiland" type="text">
     </div>
     <br>
     <div>
